--- a/Styles/architect.css
+++ b/Styles/architect.css
@@ -6,8 +6,15 @@
 * {
     font-family: 'Work Sans', sans-serif;
 }
-.btn-primary{
-    
+
+.btn-primary {
+    border-radius: 8px;
+    background: #FF900E;
+    padding: 20px 25px;
+    color: #FFF;
+    font-size: 1.25rem;
+    cursor: pointer;
+    border: 0;
 }
 
 /* header styles */
@@ -28,7 +35,7 @@ nav {
     font-weight: 700;
 }
 
-nav>ul {
+nav > ul {
     display: flex;
 }
 
@@ -43,17 +50,42 @@ nav li a {
     text-decoration: none;
     color: #424242;
 }
+
 /* banner styles */
-.banner-content{
+.banner-content {
     max-width: 800px;
     text-align: center;
     margin: 0 auto;
 }
-.banner-title{
+
+.banner-title {
     font-size: 4rem;
     font-weight: 700;
     color: #131313;
 }
-.banner-description{
+
+.banner-description {
     color: #727272;
+}
+.banner img{
+    margin-top: 20px;
+    width: 100%;
+}
+
+@media screen and (max-width: 576px) {
+    header{
+        padding: 20px;
+    }
+    nav{
+        flex-direction: column;
+    }
+}
+/* tablet or medium devices */
+@media screen and (min-width: 576px) and (max-width: 960px) {
+    header{
+        padding: 50px;
+    }
+    nav{
+        flex-direction: column;
+    }    
 }
