--- a/Styles/architect.css
+++ b/Styles/architect.css
@@ -35,7 +35,7 @@ nav {
     font-weight: 700;
 }
 
-nav > ul {
+nav>ul {
     display: flex;
 }
 
@@ -67,25 +67,70 @@ nav li a {
 .banner-description {
     color: #727272;
 }
-.banner img{
+
+.banner img {
     margin-top: 20px;
     width: 100%;
 }
 
 @media screen and (max-width: 576px) {
-    header{
+    header {
         padding: 20px;
     }
-    nav{
+
+    nav {
         flex-direction: column;
     }
 }
+
 /* tablet or medium devices */
 @media screen and (min-width: 576px) and (max-width: 960px) {
-    header{
+    header {
         padding: 50px;
     }
-    nav{
+
+    nav {
         flex-direction: column;
-    }    
+    }
+}
+
+/* main styles */
+.main {
+    max-width: 1440px;
+    margin: 0, auto;
+}
+
+/* teams styles */
+.teams-container {
+    display: flex;
+    align-items: center;    
+}
+
+.teams-img-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1.5rem;
+}
+
+.teams-content {
+    padding-left: 70px;
+    padding-right: 70px;
+}
+
+.teams-content-title {
+    font-size: 2.8rem;
+}
+
+.teams-content-title .quick-list {
+    color: #727272;
+    font-size: 45px;
+    font-weight: 500;
+}
+.teams-content-title .of-our{
+    color: #131313;
+    font-weight: 700;
+}
+.teams-content-title .txt-features{
+    color: #FF900E;
+    font-weight: 700;
 }
