--- a/Styles/architect.css
+++ b/Styles/architect.css
@@ -7,6 +7,10 @@
     font-family: 'Work Sans', sans-serif;
 }
 
+.text-grey{
+    color: #727272;
+
+}
 .btn-primary {
     border-radius: 8px;
     background: #FF900E;
@@ -64,40 +68,15 @@ nav li a {
     color: #131313;
 }
 
-.banner-description {
-    color: #727272;
-}
-
 .banner img {
     margin-top: 20px;
     width: 100%;
 }
 
-@media screen and (max-width: 576px) {
-    header {
-        padding: 20px;
-    }
-
-    nav {
-        flex-direction: column;
-    }
-}
-
-/* tablet or medium devices */
-@media screen and (min-width: 576px) and (max-width: 960px) {
-    header {
-        padding: 50px;
-    }
-
-    nav {
-        flex-direction: column;
-    }
-}
-
 /* main styles */
 .main {
     max-width: 1440px;
-    margin: 0, auto;
+    margin: 70px auto;
 }
 
 /* teams styles */
@@ -133,4 +112,35 @@ nav li a {
 .teams-content-title .txt-features{
     color: #FF900E;
     font-weight: 700;
+}
+
+
+@media screen and (max-width: 576px) {
+    header {
+        padding: 20px;
+    }
+
+    nav,
+    .teams-container {
+        flex-direction: column;
+    }
+    .teams-img-container{
+        grid-template-columns: 1fr;
+    }
+    .teams-content {
+        padding-left: 50px;
+        padding-right: 50px;
+    }
+}
+
+/* tablet or medium devices */
+@media screen and (min-width: 576px) and (max-width: 960px) {
+    header {
+        padding: 50px;
+    }
+
+    nav, 
+    .teams-container {
+        flex-direction: column;
+    }
 }
