--- a/Styles/architect.css
+++ b/Styles/architect.css
@@ -9,7 +9,11 @@
 
 .text-grey{
     color: #727272;
-
+}
+.section-title {
+    color: #131313;
+    font-size: 2.8rem;
+    font-weight: 700;
 }
 .btn-primary {
     border-radius: 8px;
@@ -31,12 +35,6 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-
-.nav-title {
-    color: #131313;
-    font-size: 2.8rem;
-    font-weight: 700;
 }
 
 nav>ul {
