--- a/Styles/architect.css
+++ b/Styles/architect.css
@@ -7,14 +7,16 @@
     font-family: 'Work Sans', sans-serif;
 }
 
-.text-grey{
+.text-grey {
     color: #727272;
 }
+
 .section-title {
     color: #131313;
     font-size: 2.8rem;
     font-weight: 700;
 }
+
 .btn-primary {
     border-radius: 8px;
     background: #FF900E;
@@ -80,7 +82,7 @@ nav li a {
 /* teams styles */
 .teams-container {
     display: flex;
-    align-items: center;    
+    align-items: center;
 }
 
 .teams-img-container {
@@ -103,16 +105,40 @@ nav li a {
     font-size: 45px;
     font-weight: 500;
 }
-.teams-content-title .of-our{
+
+.teams-content-title .of-our {
     color: #131313;
     font-weight: 700;
 }
-.teams-content-title .txt-features{
+
+.teams-content-title .txt-features {
     color: #FF900E;
     font-weight: 700;
 }
 
+/* facts styles */
 
+.facts-card-container{
+    display: flex;
+    justify-content: space-around;
+}
+.facts-card-container .card {
+    border-radius: 8px;
+    border: 1px solid #FF900E;
+    text-align: center;
+    padding: 30px;
+}
+.facts-card-container .card .card-title{
+    font-weight: 600;
+    font-size: 1.25rem;
+    margin-top: 5px;    
+}
+.facts-card-container .card .card-stats {
+    font-size: 2.8rem;
+    color: #424242;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
 @media screen and (max-width: 576px) {
     header {
         padding: 20px;
@@ -122,9 +148,11 @@ nav li a {
     .teams-container {
         flex-direction: column;
     }
-    .teams-img-container{
+
+    .teams-img-container {
         grid-template-columns: 1fr;
     }
+
     .teams-content {
         padding-left: 50px;
         padding-right: 50px;
@@ -137,7 +165,7 @@ nav li a {
         padding: 50px;
     }
 
-    nav, 
+    nav,
     .teams-container {
         flex-direction: column;
     }
