--- a/Styles/architect.css
+++ b/Styles/architect.css
@@ -139,13 +139,30 @@ nav li a {
     margin-top: 10px;
     margin-bottom: 10px;
 }
+
+.sponsors{
+    text-align: center;
+}
+.sponsors-img-container{
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 40px;
+}
+.sponsors-img-container img{
+    width: 165px;
+}
 @media screen and (max-width: 576px) {
     header {
         padding: 20px;
     }
 
     nav,
-    .teams-container {
+    .teams-container,
+    .facts-card-container, 
+    .sponsors-img-container
+    {
         flex-direction: column;
     }
 
@@ -166,7 +183,8 @@ nav li a {
     }
 
     nav,
-    .teams-container {
+    .teams-container,
+    .facts-card-container {
         flex-direction: column;
     }
 }
