--- a/Styles/architect.css
+++ b/Styles/architect.css
@@ -116,23 +116,57 @@ nav li a {
     font-weight: 700;
 }
 
+/* feature section styles */
+.features {
+    display: flex;
+    margin-top: 130px;
+    gap: 100px;
+}
+
+.features .section-title {
+    border-left: 5px solid #FF900E;
+    padding-left: 20px;
+}
+
+.feature-content .card {
+    border-radius: 8px;
+    background: #FFF;
+    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+    padding: 30px;
+    margin-bottom: 20px;
+}
+
+.ten-years-badge {
+    border-radius: 8px;
+    background: #FF900E;
+    color: #FFF;
+    width: 342px;
+    padding: 40px;
+}
+.ten-years-badge h2{
+    font-size: 4rem;
+}
+
 /* facts styles */
 
-.facts-card-container{
+.facts-card-container {
     display: flex;
     justify-content: space-around;
 }
+
 .facts-card-container .card {
     border-radius: 8px;
     border: 1px solid #FF900E;
     text-align: center;
     padding: 30px;
 }
-.facts-card-container .card .card-title{
+
+.facts-card-container .card .card-title {
     font-weight: 600;
     font-size: 1.25rem;
-    margin-top: 5px;    
+    margin-top: 5px;
 }
+
 .facts-card-container .card .card-stats {
     font-size: 2.8rem;
     color: #424242;
@@ -140,19 +174,22 @@ nav li a {
     margin-bottom: 10px;
 }
 
-.sponsors{
+.sponsors {
     text-align: center;
 }
-.sponsors-img-container{
+
+.sponsors-img-container {
     margin-top: 50px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     gap: 40px;
 }
-.sponsors-img-container img{
+
+.sponsors-img-container img {
     width: 165px;
 }
+
 @media screen and (max-width: 576px) {
     header {
         padding: 20px;
@@ -160,9 +197,8 @@ nav li a {
 
     nav,
     .teams-container,
-    .facts-card-container, 
-    .sponsors-img-container
-    {
+    .facts-card-container,
+    .sponsors-img-container {
         flex-direction: column;
     }
 
